# myDREAMS

./: .gitignore  .gitmodules  .mcp.json  CHANGELOG.md  CLAUDE.md  CONTINUE_SESSION.md  MORNING-STATUS.md  OptimizingClaude  README.md  VisionFor_myDreams.txt  WNC Mountain Homes.txt  WNCmountains.com.InitialTHoughts.md  alembic.ini  hello.py  property-extension-v3.9.26.zip.txt  pyproject.toml  requirements.txt  setup_dreams.sh  status check  test_monitor.py  zillow_debug.html
.claude/: settings.json
apps/fub-core/: README.md  pyproject.toml
apps/fub-core/src/fub_core/: __init__.py  cache.py  client.py  exceptions.py
archive/: README.md  redfin_imports.db.archived-20260124
config/: config.example.yaml
deploy/: Caddyfile  gunicorn.conf.py  prd-crontab.txt
docs/: ARCHITECTURE.md  DATA_DICTIONARY.md  DATA_QUALITY_TRACKING.md  DECISIONS.md  DEPLOYMENT.md  FUTURE_FEATURES.md  LISTINGS_SCHEMA.md  PARCELS_SCHEMA.md  PHOTO_MODULE_DESIGN.md  PHOTO_PIPELINE_SPEC.md  PIPELINE_FRAMEWORK.md  PLATFORM_ARCHITECTURE_DISCUSSION.md  PROJECT_PLAYBOOK.md  ROADMAP.md  SALES_FLOW.md  TODO.md  UsingNotebookLM.md  contact-dispositions.md  data-dictionary.md  differentiation-strategy.md  hubspot-api-deep-dive.md  niri-setup.md  project-index.md  re-agent-tax-deductions.md  report-formatting-guide.md  smart-list-analysis.md  smart-search-plan.md  todoist-fub-task-sync-design.md
mcp-servers/: README.md  requirements.txt
migrations/: env.py
mls-mappings/: carolinaToGridMappingsPropertyIDX.csv
reports/: calls-2026-03-05.html  calls-week-2026-02-09.html  contact_snapshot_analysis.py  (+8 more)
(+497 files in other folders)
