[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fub-core"
version = "0.1.0"
description = "Core Follow Up Boss API client utilities"
requires-python = ">=3.10"
dependencies = ["requests>=2.31.0", "python-dotenv"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

